# XJTU-ODPlatform

./: -tree -r HEAD --name-only  .gitignore  ODPlatform操作指南.md  mlflow.db  paths.py  模型训练.md
.workbuddy/memory/: 2026-07-21.md  2026-07-22.md  MEMORY.md
apps/platform/: pyproject.toml
apps/platform/src/od_platform/: __init__.py
apps/platform/src/od_platform/cli/: __init__.py  evaluate_model.py  gen_config.py  infer_model.py  init_project.py  reset_project.py  tensorboard.py  train_model.py  transform_data.py  validate_data.py
apps/platform/src/od_platform/common/: __init__.py  constants.py  lineage.py  logging_utills.py  logging_utils.py  naming.py  paths.py  performance_utils.py  refs.py  registry_utils.py  report_config.py  run_context.py  string_utils.py
apps/platform/src/od_platform/data_pipeline/: __init__.py  orchestrator.py
apps/platform/src/od_platform/data_pipeline/convert/: __init__.py  registry.py  service.py
apps/platform/src/od_platform/data_pipeline/convert/converters/: __init__.py  _geometry.py  coco.py  createml.py  cvat.py  dota.py  labelme.py  pascal_voc.py  yolo.py
apps/platform/src/od_platform/data_pipeline/split/: __init__.py  manifest.py  materializer.py  registry.py  report.py  service.py  yaml_writer.py
apps/platform/src/od_platform/data_pipeline/split/strategies/: __init__.py  _common.py  group_split.py  random_split.py  stratified_multilabel.py  stratified_weighted.py
apps/platform/src/od_platform/data_validation/: __init__.py  distribution.py  registry.py  report.py  service.py  snapshot.py
apps/platform/src/od_platform/data_validation/checks/: __init__.py  _lineage.py  annotation_integrity.py  bbox_quality.py  class_balance.py  cross_split_leakage.py  duplicate_image.py  fingerprint_match.py  image_integrity.py  label_integrity.py  manifest_lineage.py  pair_existence.py  smoke.py  yaml_schema.py
apps/platform/src/od_platform/frame_source/: __init__.py  factory.py
apps/platform/src/od_platform/frame_source/core/: __init__.py  base.py  config.py  registry.py  types.py
apps/platform/src/od_platform/frame_source/sources/: __init__.py  camera.py  image.py  video.py
apps/platform/src/od_platform/model_eval/: __init__.py  analyzer.py  history.py  infer_eval.py  metrics.py  report.py  service.py
apps/platform/src/od_platform/model_infer/: __init__.py  cancel.py  hooks.py  overlay.py  pipeline.py  pipeline_config.py  pipline_config.py  service.py  sinks.py
apps/platform/src/od_platform/model_train/: __init__.py  archive.py  demo_train.py  hooks.py  report.py  report_builder.py  result.py  service.py  tracking.py  train_model.py
apps/platform/src/od_platform/modeling/: evaluate.py  predict.py  train.py  visualize.py
apps/platform/src/od_platform/runtime_config/: __init__.py  base_config.py  gen_config.py  generator.py  infer_config.py  loaders.py  merger.py  pipeline_config.py  registry.py  report.py  train_config.py  val_config.py
apps/platform/src/od_platform/train_report/: __init__.py  analysis.py  builder.py  cli.py  readers.py  report.py
apps/platform/src/od_platform/visualization/: __init__.py  visualizer.py
apps/platform/src/od_platform/visualization/core/: __init__.py  data_types.py  draw_utils.py  renderers.py  text_cache.py
apps/platform/tests/: base_smoke.py  dataset_converter.py  test_model_eval.py
apps/platform/tests/YOLO推理检测/: 01_原生推理.py  03_opencv捕获信息叠加显示.py  04_opencv纯摄像头测试.py  字体缓存速度测试.py  帧源捕获测试.py  文字宽度计算.py  美化模块使用.py  美化模块使用_自训练模型.py  自测模块.py
apps/web-backend/: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/web-backend/src/od_web_backend/: asgi.py  settings.py  urls.py  wsgi.py
apps/web-backend/src/od_web_backend/analysis/: apps.py  llm.py  prompts.py  report.py  urls.py  views.py
apps/web-backend/src/od_web_backend/core/: apps.py  exceptions.py  pagination.py  renderers.py  urls.py  views.py
apps/web-backend/src/od_web_backend/history/: apps.py  models.py  serialize.py  services.py  urls.py  views.py
apps/web-backend/src/od_web_backend/history/migrations/: 0001_initial.py
apps/web-backend/src/od_web_backend/inference/: apps.py  predictor.py  registry.py  services.py  urls.py  views.py
apps/web-frontend/: .env.development  .env.production  README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
docs/: DATASET_GUIDE.md  模型评估.md
scripts/: init_project.py  make_disaster_data.ps1  make_disaster_data.sh  reset_project.py  train_helmet.py
scripts/checkpoints/: config_report_test.py  data_vaildate_t2.py  data_vaildate_t3.py  data_vaildate_tt.py  data_validata.py  data_validata_1.py  data_validata_2.py  manifest_lineage.py  registry_autoloads.py  registry_needs_import.py  (+1 more)
(+34 files in other folders)
