# XJTU-ODPlatform - platform端点配置

# 必写:告诉 pip "用什么工具来构建这个包"
[build-system]
requires = ["hatchling>= 1.30.1"]
build-backend = "hatchling.build"

# 项目元信息:名字、版本、依赖、作者……(PEP 621 标准)
[project]
name = "od-platform"
dynamic = ["version"]
description = "XJTU-ODPlatform - platform端点配置, 目标检测平台核心引擎"
keywords = ['object-dection','Yolo', '深度学习']
authors = [
    { name = "Xiao Liang",email = "sx12101184@qq.com"  },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "colorlog>=6.10.1",      # 日志彩色(③日志工具篇用过)
    "torch>=2.13.0",         # 深度学习框架
    "ultralytics>=8.4.92",   # YOLO
]


[project.scripts]
odp-init = "od_platform.cli.init_project:initialize_project"
odp-reset = "od_platform.cli.reset_project:main"
odp-transform = "od_platform.cli.transform_data:main"
odp-validate = "od_platform.cli.validate_data:main"
odp-gen-config = "od_platform.cli.gen_config:main"
odp-train = "od_platform.cli.train_model:main"
odp-infer= "od_platform.cli.infer_model:main"
odp-tensorboard = "od_platform.cli.tensorboard:main"
odp-eval = "od_platform.cli.evaluate_model:main"


[project.optional-dependencies]
tracking = ["mlflow>=2.14.0", "tensorboard>=2.17.0"]


[tool.hatch.version]
path = "src/od_platform/_version.py"

