[project]
name = "od-web-backend"
version = "0.1.0"
description = "脑部 MRI 肿瘤检测系统 —— Web 后端(Django + DRF,复用 od_platform 引擎)"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "pydantic>=2.5",
    "numpy>=1.24",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "python-docx>=1.1",
    "xhtml2pdf>=0.2.16",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# 真实推理(生产)。GPU 机器另按官方指引装对应 CUDA 版 torch。
yolo = ["ultralytics>=8.2", "torch>=2.1"]
# 更高保真的 PDF(需系统库 cairo/pango/gdk-pixbuf)
weasyprint = ["weasyprint>=60"]
# 大模型
dashscope = ["dashscope>=1.17"]
openai = ["openai>=1.30"]
# 生产 WSGI 服务器 + PostgreSQL
prod = ["gunicorn>=22.0", "psycopg[binary]>=3.1"]

# ---------------------------------------------------------------------------
# 说明:od_platform 引擎由本仓 apps/platform 提供。
#   - 开发期:settings.py 会自动把 apps/platform/src 挂到 sys.path,无需安装。
#   - 规范做法:给 apps/platform 增加打包元数据后 `pip install -e apps/platform`。
# ---------------------------------------------------------------------------

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
